jenkins/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jenkins
  namespace: jenkins
spec:
  host: jenkins.jenkins.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
