jenkins/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins
  namespace: jenkins
spec:
  gateways:
  - jenkins-gateway
  hosts:
  - "jenkins.datamuseengine.com"
  http:
  - route:
    - destination:
        host: jenkins.jenkins.svc.cluster.local
        port:
          number: 8080
